--- a/kubiks.htm
+++ b/kubiks.htm
@@ -18,10 +18,10 @@
 <body>
     <a href="index.html" class="back-link">wstecz</a>
     <center>
-        <video controls width="1080" height="620">
-            <source src="piosenka.mp4" type="video/mp4">
-            Twoja przeglądarka nie obsługuje odtwarzania filmów.
-        </video>
+        <audio controls>
+            <source src="piosenka.mp3" type="audio/mpeg">
+            Twoja przeglądarka nie obsługuje odtwarzania muzyki.
+        </audio>
     </center>
 </body>
 </html>
