--- a/kubiks.htm
+++ b/kubiks.htm
@@ -18,12 +18,11 @@
 <body>
     <a href="index.html" class="back-link">wstecz</a>
     <center>
-	        <img src="swiry.png" alt="zdjecie">
         <audio controls>
             <source src="piosenka.mp3" type="audio/mpeg">
             Twoja przeglądarka nie obsługuje odtwarzania muzyki.
         </audio>
-
+        <img src="swiry.png" alt="Opis zdjęcia">
     </center>
 </body>
 </html>
