--- a/kubiks.htm
+++ b/kubiks.htm
@@ -22,7 +22,7 @@
             <source src="piosenka.mp3" type="audio/mpeg">
             Twoja przeglądarka nie obsługuje odtwarzania muzyki.
         </audio>
-        <img src="swiry.png" alt="Opis zdjęcia">
+        <img src="swiry.png" alt="zdjęcie">
     </center>
 </body>
 </html>
