--- a/kubiks.htm
+++ b/kubiks.htm
@@ -13,6 +13,16 @@
             left: 10px;
             font-size: 18px;
         }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 720px;
+        }
+        .image-container img {
+            max-width: 1080px;
+            max-height: 720px;
+        }
     </style>
 </head>
 <body>
@@ -22,7 +32,9 @@
             <source src="piosenka.mp3" type="audio/mpeg">
             Twoja przeglądarka nie obsługuje odtwarzania muzyki.
         </audio>
-        <img src="swiry.png" alt="zdjęcie">
+        <div class="image-container">
+            <img src="swiry.png" alt="zdjęcie">
+        </div>
     </center>
 </body>
 </html>
