--- a/kubiks.htm
+++ b/kubiks.htm
@@ -29,6 +29,7 @@
     <center>
         <a href="index.html" class="back-link">wstecz</a>
         <audio controls>
+        <a href="index.html" class="back-link">wstecz</a>
             <source src="piosenka.mp3" type="audio/mpeg">
             Twoja przeglądarka nie obsługuje odtwarzania muzyki.
         </audio>
