--- a/kubiks.htm
+++ b/kubiks.htm
@@ -21,18 +21,19 @@
         }
         .image-container img {
             max-width: 1080px;
-            max-height: 620px;
+            max-height: 720px;
         }
     </style>
 </head>
 <body>
+    <a href="index.html" class="back-link">wstecz</a>
     <center>
-        <a href="index.html" class="back-link">wstecz</a>
         <audio controls>
-        <a href="index.html" class="back-link">wstecz</a>
             <source src="piosenka.mp3" type="audio/mpeg">
             Twoja przeglądarka nie obsługuje odtwarzania muzyki.
         </audio>
+        <div class="image-container">
+            <img src="swiry.png" alt="zdjęcie">
         </div>
     </center>
 </body>
